@@ -9,7 +9,7 @@ import (
 
 const (
 	UtxoIdxLen            = 8 // Increase this value (maximum 32) for better security at a cost of memory usage
-	UTXO_RECORDS_PREALLOC = 46e6
+	UTXO_RECORDS_PREALLOC = 50e6
 )
 
 type UtxoKeyType [UtxoIdxLen]byte
